packages/react-ui-components/src/Tabs/style.module.css
.tabs {
    composes: reset from '../reset.module.css';
    height: 100%;
}

.tabs--vertical {
    display: flex;
    gap: var(--spacing-Full);
}

.tabs__content {
    composes: reset from '../reset.module.css';
    overflow-y: auto;
    flex-grow: 1;
}

.tabNavigation {
    composes: reset from '../reset.module.css';
    display: block;
    margin: 0;
    padding: 0;
    list-style: none;
    background: var(--colors-ContrastDarkest);
    border-bottom: 1px solid var(--colors-ContrastDark);

    &:before,
    &:after {
        content: '';
        display: table;
    }
    &:after {
        clear: both;
    }
}

.tabs--vertical .tabNavigation {
    display: flex;
    flex-direction: column;
    border: 1px solid var(--colors-ContrastDark);
    width: max-content;
    min-height: 0;
    height: min-content;
}

.tabs--sticky .tabNavigation {
    position: sticky;
    top: 0;
}

.tabNavigation__item {
    composes: reset from '../reset.module.css';
    position: relative;
    float: left;
    border-top: 1px solid var(--colors-ContrastDark);
    border-right: 1px solid var(--colors-ContrastDark);
    color: var(--colors-ContrastBrightest);
}
.tabNavigation__item--isActive {
    background-color: var(--colors-ContrastDarker);
    cursor: default;
    border-bottom: 1px solid var(--colors-ContrastDarker);
    margin-bottom: -1px;

    &:after {
        display: block;
        content: ' ';
        position: absolute;
        top: -1px;
        left: 0;
        right: 0;
        height: 2px;
        width: 100%;
        background: var(--colors-PrimaryBlue);
    }

    > .tabNavigation__itemBtn {
        color: var(--colors-PrimaryBlue);
    }
}

.tabs--vertical .tabNavigation__item {
    border: none;
    margin-bottom: unset!important;
}

.tabs--vertical .tabNavigation__item--isActive {

    &:after {
        display: block;
        content: ' ';
        position: absolute;
        top: 0;
        left: 0;
        right: -1px;
        height: 100%;
        width: 2px;
        background: var(--colors-PrimaryBlue);
    }
}

.tabNavigation__itemBtn {
    composes: reset from '../reset.module.css';
    display: inline-block;
    height: var(--spacing-GoldenUnit);
    padding: 0 var(--spacing-Full);
    line-height: var(--spacing-GoldenUnit);
    cursor: pointer;
    border: 0;
    background: 0;

    &:hover {
        color: var(--colors-PrimaryBlue);
    }

    &:focus {
        outline: 0;
    }
}
.tabs--vertical .tabNavigation__itemBtn {
    width: 100%;
    text-align: left;
    display: block;
    white-space: nowrap;
}
.tabNavigation__itemBtnIcon {
    color: currentColor;
}
.tabNavigation__itemBtnIcon--hasLabel {
    margin-right: var(--spacing-Half);
}

.panel {
    composes: reset from '../reset.module.css';
    overflow-y: auto;
}

